syntax = "proto3";
package DouDizhu;

option go_package = "network/protodef";
option csharp_namespace = "Network.Proto";

message GameMsgHeader {
	uint32 messageId = 1;
}



message GameMsgReqPacket {
	GameMsgHeader header = 1;
	oneof content {
		ChatMsgRequest chatMsg = 2;
	}
}

message GameMsgRespPacket {
	GameMsgHeader header = 1;
	oneof content {
		Error error = 2;
		ChatMsgResponse chatMsg = 3;
	}
}





message ChatMsgRequest {
	string content = 1;
}

message ChatMsgResponse {
}





message Error {
	string code = 1;
	string message = 2;
}